# tmcp-rust

./: .gitignore  Cargo.toml  Readme.md
examples/: client.rs
old_code/: client.rs_  lib.rs_
src/: create.rs  errors.rs  get.rs  lib.rs  settings.rs  tests.rs  tsp_messages.rs  verify.rs
wallets/: server.sqlite  wallet.sqlite
